logs/stormssh-gui.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyNaCl-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/bcrypt-3.1.4.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nacl'...
Listing './lib/python3.5/site-packages/nacl/bindings'...
Listing './lib/python3.5/site-packages/nacl/pwhash'...
Listing './lib/python3.5/site-packages/paramiko'...
Listing './lib/python3.5/site-packages/paramiko-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/storm'...
Listing './lib/python3.5/site-packages/storm/parsers'...
Listing './lib/python3.5/site-packages/storm/static'...
Listing './lib/python3.5/site-packages/storm/static/css'...
Listing './lib/python3.5/site-packages/storm/static/css/themes'...
Listing './lib/python3.5/site-packages/storm/static/css/themes/black'...
Listing './lib/python3.5/site-packages/storm/static/css/themes/black/img'...
Listing './lib/python3.5/site-packages/storm/static/css/themes/modern'...
Listing './lib/python3.5/site-packages/storm/static/css/themes/storm'...
Listing './lib/python3.5/site-packages/storm/static/css/themes/storm/img'...
Listing './lib/python3.5/site-packages/storm/static/js'...
Listing './lib/python3.5/site-packages/storm/static/js/core'...
Listing './lib/python3.5/site-packages/storm/templates'...
Listing './lib/python3.5/site-packages/storm_gui'...
Listing './lib/python3.5/site-packages/stormssh-0.6.9.egg-info'...
Listing './lib/python3.5/site-packages/stormssh_gui-0.4.egg-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
